--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,15 @@
     <h1>あなたの番号</h1>
     <div id="number">読み込み中...</div>
     <script>
-      fetch('/api/assign').then(res => res.json()).then(data => {
-        document.getElementById('number').textContent = data.seatNumber;
-      }).catch(err => {
+      const params = new URLSearchParams(window.location.search);
+      const eventId = params.get('eventId') || 'default';
+      fetch('/api/assign?eventId=' + encodeURIComponent(eventId))
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById('number').textContent = data.seatNumber;
+        }).catch(err => {
         document.getElementById('number').textContent = '取得できませんでした';
-      });
+        });
     </script>
-</body>
+  </body>
 </html>
