--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,28 @@
     </style>
 </head>
 <body>
-    <h1>あなたの番号</h1>
+    <h1 id="eventTitle">イベント</h1>
     <div id="number">読み込み中...</div>
     <script>
-      fetch('/api/assign').then(res => res.json()).then(data => {
-        document.getElementById('number').textContent = data.seatNumber;
-      }).catch(err => {
-        document.getElementById('number').textContent = '取得できませんでした';
-      });
+      const params = new URLSearchParams(location.search);
+      const eventId = params.get('event');
+      if(!eventId){
+        document.getElementById('number').textContent = 'イベントIDがありません';
+      } else {
+        fetch('/api/events/' + eventId + '/assign')
+          .then(res => res.json())
+          .then(data => {
+            if(data.error){
+              document.getElementById('number').textContent = data.error;
+              return;
+            }
+            document.getElementById('eventTitle').textContent = data.eventName;
+            document.getElementById('number').textContent = data.seatNumber;
+          })
+          .catch(() => {
+            document.getElementById('number').textContent = '取得できませんでした';
+          });
+      }
     </script>
 </body>
 </html>
