--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>席決めアプリ</title>
-    <style>
-      body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-      #number { font-size: 48px; margin-top: 20px; }
-    </style>
+  <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 40px;
+        max-width: 600px;
+        margin: auto;
+      }
+      #number {
+        font-size: 48px;
+        margin-top: 20px;
+      }
+  </style>
 </head>
 <body>
     <h1 id="eventTitle">イベント</h1>
